Standardize API routes with /api prefix and update DataSeeder credentials